# vietlott-data

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  API_CHANGES_SUMMARY.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Makefile  Procfile  QUICK_START.md  cli.py  convert_dates.py  deploy.bat  index.html  keno.py  power655.py  power655_results.csv  predict_next_series_45.py  predict_next_series_55.py  pyproject.toml  readme.md  render_readme.py  requirements-dev.txt  requirements.txt  strategy_comparison_report.txt  test_bingo18.py  test_power535.py  todo.md  utils.py  vietlott-data.code-workspace
.fleet/: settings.json
.github/instructions/: python.instructions.md
.github/workflows/: crawl-and-predict.yml  crawl.yaml  deploy-pages.yml  publish-to-pypi.yaml
cli/: keno.py  power655.py  render_readme.py
cmd/: power655.py
config/: products.py
crawler/: collections.py  config.py  fetch.py  logger.py
crawler/cli/: main.py
crawler/products/: __init__.py  keno.py  power645.py  power655.py
crawler/requests_helper/: config.py  fetch.py
data/: 3d.jsonl  3d_pro.jsonl  bingo18.jsonl  export_to_csv.py  keno.jsonl  power535.jsonl  power645.jsonl  power655.jsonl
data/655/: 20170801.jsonl  20170803.jsonl  20170805.jsonl  20170808.jsonl  20170810.jsonl  20170812.jsonl  20170815.jsonl  20170817.jsonl  20170819.jsonl  20170822.jsonl  20170824.jsonl  20170826.jsonl  20170829.jsonl  20170831.jsonl  20170902.jsonl  20170905.jsonl  20170907.jsonl  20170909.jsonl  20170912.jsonl  20170914.jsonl  20170916.jsonl  20170919.jsonl  20170921.jsonl  20170923.jsonl  20170926.jsonl  20170928.jsonl  20170930.jsonl  20171003.jsonl  20171005.jsonl  20171007.jsonl  20171010.jsonl  20171012.jsonl  20171014.jsonl  20171017.jsonl  20171019.jsonl  20171021.jsonl  20171024.jsonl  20171026.jsonl  20171028.jsonl  20171031.jsonl  (+793 more)
data/keno/: 20200110.jsonl  20200111.jsonl  20200112.jsonl  20200113.jsonl  20200114.jsonl  20200115.jsonl  20200116.jsonl  20200117.jsonl  20200118.jsonl  20200119.jsonl  20200120.jsonl  20200121.jsonl  20200122.jsonl  20200123.jsonl  20200124.jsonl  20200125.jsonl  20200126.jsonl  20200127.jsonl  20200128.jsonl  20200129.jsonl  20200130.jsonl  20200131.jsonl  20200201.jsonl  20200202.jsonl  20200204.jsonl  20200205.jsonl  20200206.jsonl  20200207.jsonl  20200208.jsonl  20200209.jsonl  20200210.jsonl  20200211.jsonl  20200212.jsonl  20200213.jsonl  20200214.jsonl  20200215.jsonl  20200216.jsonl  20200217.jsonl  20200218.jsonl  20200219.jsonl  (+281 more)
deploy/: README.md
deploy/aws-lambda/: README.md  build_and_deploy.sh  lambda_function.py  template.yaml
deploy/cloudflare-workers/: README.md  package.json  wrangler.toml
deploy/cloudflare-workers/src/: index.js
docs/: README.md  index.html  styles.css
helpers/: format.py
model/: dataset.py
model/strategy/: base.py  not_repeat.py
nb/: analyze.ipynb  auto-scraper.ipynb  fetch.ipynb  join_data.ipynb  model.ipynb
src/: render_docs.py  render_readme.py
src/cli/: crawl.py  missing.py
src/machine_learning/: __init__.py  backtest.py  base.py  frequency.py  long_absence.py  make_prediction.py  not_repeat.py  pattern.py  prediction_summary.md  random_strategy.py  readme.md  render_prediction.py
tests/: fetch.py  sth.py  sth2.py
tests/test_crawler/: test_fetch.py
vietlott/config/: products.py
vietlott/crawler/: logger.py
vietlott/model/: dataset.py
vietlott/tests/: fetch.py
(+64 files in other folders)
